Fix problem of horizontal scroll bar appearing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,7 +8,6 @@
 
 body{
     min-height: 100vh;
-    min-width: 100vw;
     font-family: 'Roboto', 'sans-serif';
     background-color: beige;
     
